--- a/.github/workflows/Openwrt-AutoBuild.yml
+++ b/.github/workflows/Openwrt-AutoBuild.yml
@@ -132,8 +132,8 @@ jobs:
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "Asia/Shanghai"
-        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "github-actions[bot]"
+        #git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        #git config --global user.name "github-actions[bot]"
 
     - name: Get current date
       id: date
@@ -248,15 +248,31 @@ jobs:
     - name: Defconfig
       run: |
         cd openwrt
-        make defconfig
-        if [[ ! "${{matrix.target}}" =~ (amlogic_*|armsr_armv8|bcm27xx_*|rockchip_armv8|sunxi_*|x86_*) ]]; then
-        sed -n '/# Wireless Drivers/,/# end of Wireless Drivers/p' .config | sed -e 's/=m/=n/' >>.config
-        #sed -i "s/\(kmod-qca.*\)=m/\1=n/" .config
-        if [[ "${{matrix.target}}" == "rockchip_rk35xx" ]]; then 
-            sed -n '/# Video Support/,/# end of Video Support/p' .config | sed -e 's/=m/=n/' >>.config
-        fi
-        make defconfig
-        fi
+        # #make defconfig
+        
+        # cp .config .config.bak
+
+        # # 执行 make defconfig，生成默认配置文件
+        # make defconfig
+
+        # if [[ ! "${{matrix.target}}" =~ (amlogic_*|armsr_armv8|bcm27xx_*|rockchip_armv8|sunxi_*|x86_*) ]]; then
+        # sed -n '/# Wireless Drivers/,/# end of Wireless Drivers/p' .config | sed -e 's/=m/=n/' >>.config
+        # #sed -i "s/\(kmod-qca.*\)=m/\1=n/" .config
+        # if [[ "${{matrix.target}}" == "rockchip_rk35xx" ]]; then 
+        #     sed -n '/# Video Support/,/# end of Video Support/p' .config | sed -e 's/=m/=n/' >>.config
+        # fi
+        # make defconfig
+        # fi
+
+        # # 合并之前备份的 .config 配置
+        # if [ -f .config.bak ]; then
+        #     echo "Merging previous .config changes..."
+        #     # 选择性地合并配置文件
+        #     diff -u .config.bak .config | patch -p1 <(diff -u .config.bak .config)
+        #     # 如果你想将备份的 .config 直接追加到当前的 .config，可以使用以下命令
+        #     # cat .config.bak >> .config
+        # fi
+        
         cat .config
 
     - name: Cache
