--- a/devices/common/.config
+++ b/devices/common/.config
@@ -98,7 +98,7 @@ CONFIG_PACKAGE_kmod-aic8800=n
 CONFIG_IMAGEOPT=y
 CONFIG_VERSIONOPT=y
 
-CONFIG_VERSION_MANUFACTURER="Kiddin'"
+CONFIG_VERSION_MANUFACTURER="Colin'"
 CONFIG_VERSION_FILENAMES=n
 CONFIG_VERSION_CODE_FILENAMES=n
 
